jota: agent guide rewritten for the current tree, CLAUDE.md links to it